# TP2

./: CMakeLists.txt  invert_red_blue.cpp  save-channels.cpp  save-green-channel.cpp  testBuildHistogramme.cpp  testColorImage2D.cpp  testColorImage2DGenere.cpp  testGrayLevelImage2D.cpp  testVieuxEcran.cpp
include/: Accessor.h  Color.h  Histogramme.h  Image2D.h  Image2DReader.h  Image2DWriter.h  Image2DWritter.h
